--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
-body {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   user-select: none;
 }
 
 #lista-tarefas li {
+  list-style: none;
+  padding: 10px;
+  border-bottom: 1px solid rgba(238, 238, 238, 0.521);
   cursor: pointer;
 }
 
 .completed {
-  text-decoration: line-through solid;
+  text-decoration: line-through;
 }
 
 .selected {
-  background-color: gray;
+  background-color: #f2f2f238;
 }
